# BamborVideoStream-rust

./: .rustfmt.toml  Cargo.toml  README.md
site/: app.html  loading.js  p1.html  p1.js
src/: error.rs  main.rs
src/services/: config.rs  mod.rs
src/services/p1/: connection.rs  mod.rs
src/v1/: mod.rs  site.rs
src/v1/authed/: mod.rs  p1.rs
