[package]
name = "BamborVideoStream"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "An API and WebUI to stream video from a Bambu P1P/P1S device in LAN mode"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/BamborVideoStream-rust"
readme = "README.md"


[[bin]]
name = "bamborvideostream"
path = "src/main.rs"


[badges]
appveyor = { repository = "KizzyCode/BamborVideoStream-rust" }


[features]
default = []


[dependencies]
ehttpd = { version = "0.8.2", default-features = false }
ehttpd-querystring = { version = "0.2.0", default-features = false }
native-tls = { version = "0.2.12", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["asm", "std"] }

[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
