[package]
name = "bamborvideostream"
version = "0.1.1"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "An API and WebUI to stream video from a Bambu P1P/P1S device in LAN mode"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/BamborVideoStream-rust"
readme = "README.md"


[[bin]]
name = "bamborvideostream"
path = "src/main.rs"


[badges]
appveyor = { repository = "KizzyCode/BamborVideoStream-rust" }


[features]
default = []


[dependencies]
ehttpd = { version = "0.9.0", default-features = false, features = ["server"] }
ehttpd-querystring = { version = "0.2.1", default-features = false }
native-tls = { version = "0.2.12", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }

[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
